--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
 group 'de.wuespace.telestion.extension'
@@ -7,6 +8,28 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/wuespace/telestion-extension-template"
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            groupId = 'de.wuespace.telestion.extension'
+            artifactId = 'telestion-extension-template'
+            //version = '1.1'
+
+            from components.java
+        }
+    }
 }
 
 dependencies {
