--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,14 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven {
+        name = "GitHubPackages"
+        url = uri("https://maven.pkg.github.com/wuespace/telestion-core/")
+        credentials {
+            username = System.getenv("GITHUB_ACTOR")
+            password = System.getenv("GITHUB_TOKEN")
+        }
+    }
 }
 
 publishing {
@@ -33,6 +41,15 @@ publishing {
 }
 
 dependencies {
+    implementation 'de.wuespace.telestion:telestion-api:0.0.19'
+    implementation 'de.wuespace.telestion:telestion-services:0.0.19'
+
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '6.6'
+
+    implementation "io.vertx:vertx-core:4.0.3"
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
