--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,9 +37,13 @@ jobs:
 
       - name: Build packages 🛠️
         run: chmod +x gradlew && ./gradlew build
+        env:
+          GITHUB_TOKEN: ${{ secrets.READ_PACKAGES }}
 
       - name: Test packages 🛃
         run: ./gradlew test
+        env:
+          GITHUB_TOKEN: ${{ secrets.READ_PACKAGES }}
 
       - name: Upload Test Report 📠
         uses: scacap/action-surefire-report@v1.0.5
