chore: Update CI workflow to match the template

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,13 @@
+# For most projects, this workflow file will not need changing; you simply need
+# to commit it to your repository.
+#
+# ******** NOTE ********
+# If you need access to the GitHub Maven package registry from other repositories,
+# create a personal access token with the following scopes:
+# - read:packages
+# and name it "READ_PACKAGES".
+# After this step, overwrite the default GITHUB_TOKEN environment variable with the created PAT
+# in the gradle build and test steps.
 name: CI
 
 # Events that trigger this workflow
@@ -19,7 +29,8 @@ jobs:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          key: |
+            ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
 
@@ -30,10 +41,10 @@ jobs:
           java-version: '16'
           java-package: jdk
 
-      - name: Set up Python 3.8 💿
-        uses: actions/setup-python@v2.2.2
-        with:
-          python-version: 3.8
+      # - name: Set up Python 3.8 💿
+      #   uses: actions/setup-python@v2.2.2
+      #   with:
+      #     python-version: 3.8
 
       - name: Build packages 🛠️
         run: chmod +x gradlew && ./gradlew build
@@ -55,7 +66,8 @@ jobs:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          key: |
+            ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
 
@@ -66,10 +78,10 @@ jobs:
           java-version: '16'
           java-package: jdk
 
-      - name: Set up Python 3.8 💿
-        uses: actions/setup-python@v2.2.2
-        with:
-          python-version: 3.8
+      # - name: Set up Python 3.8 💿
+      #   uses: actions/setup-python@v2.2.2
+      #   with:
+      #     python-version: 3.8
 
       - name: Build packages 🛠️
         run: chmod +x gradlew && ./gradlew build
@@ -78,5 +90,3 @@ jobs:
       
       - name: Test packages 🛃
         run: ./gradlew test
-        env:
-          GITHUB_TOKEN: ${{ secrets.READ_PACKAGES }}
