--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'maven-publish'
 }
 
-group 'de.wuespace.telestion.extension'
+group '##GROUP_ID##'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -22,7 +22,7 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = "https://maven.pkg.github.com/wuespace/telestion-extension-template"
+            url = "https://maven.pkg.github.com/##REPOSITORY##"
             credentials {
                 username = System.getenv("GITHUB_ACTOR")
                 password = System.getenv("GITHUB_TOKEN")
@@ -31,9 +31,9 @@ publishing {
     }
     publications {
         gpr(MavenPublication) {
-            groupId = 'de.wuespace.telestion.extension'
-            artifactId = 'telestion-extension-template'
-            //version = '1.1'
+            groupId = '##GROUP_ID##'
+            artifactId = '##REPO_NAME##'
+            version = System.getenv("VERSION")
 
             from components.java
         }
