--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = "https://maven.pkg.github.com/##REPOSITORY##"
+            url = "https://maven.pkg.github.com/##REPO_USER##/##REPO_NAME##"
             credentials {
                 username = System.getenv("GITHUB_ACTOR")
                 password = System.getenv("GITHUB_TOKEN")
