feat: add environment file for github credentials

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'maven-publish'
 }
 
+var GITHUB_ACTOR = null;
+var GITHUB_TOKEN = null;
+
 group '##GROUP_ID##'
 version '1.0-SNAPSHOT'
 
@@ -12,8 +15,8 @@ repositories {
         name = "GitHubPackages"
         url = uri("https://maven.pkg.github.com/wuespace/telestion-core/")
         credentials {
-            username = System.getenv("GITHUB_ACTOR")
-            password = System.getenv("GITHUB_TOKEN")
+            username = System.getenv("GITHUB_ACTOR") == null ? GITHUB_ACTOR : System.getenv("GITHUB_ACTOR")
+            password = System.getenv("GITHUB_TOKEN") == null ? GITHUB_TOKEN : System.getenv("GITHUB_TOKEN")
         }
     }
 }
@@ -53,6 +56,28 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
 }
+
+task loadEnvironmentVariables {
+    file('.env').readLines().each() {
+        if (!it.isEmpty() && !it.startsWith("#")) {
+            def pos = it.indexOf("=")
+            def key = it.substring(0, pos)
+            def value = it.substring(pos + 1)
+
+            if (key == "GITHUB_ACTOR") {
+                println "FOUND ACTOR"
+                GITHUB_ACTOR = value
+            }
+
+            if (key == "GITHUB_TOKEN") {
+                GITHUB_TOKEN = value
+            }
+        }
+    }
+}
+
+assemble.dependsOn(loadEnvironmentVariables)
+
 
 test {
     useJUnitPlatform()
