fix: rename credentials file

--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ dependencies {
 }
 
 task loadEnvironmentVariables {
-    file('.env').readLines().each() {
+    file('.github.credentials').readLines().each() {
         if (!it.isEmpty() && !it.startsWith("#")) {
             def pos = it.indexOf("=")
             def key = it.substring(0, pos)
