feat: Exclude credentials file from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 .idea
-#.github.credentials
+.github.credentials
 
 ### Kotlin template
 # Compiled class file
