--- a/.github.credentials.template
+++ b/.github.credentials.template
@@ -1,3 +1,3 @@
 # RENAME THIS FILE TO .github.credentials
-GITHUB_TOKEN = INSERT GITHUB USER ACCOUNT NAME HERE
-GITHUB_TOKEN = INSERT PERSONAL ACCESS TOKEN HERE
+GITHUB_ACTOR=INSERT GITHUB USER ACCOUNT NAME HERE
+GITHUB_TOKEN=INSERT PERSONAL ACCESS TOKEN HERE
