--- a/build.gradle
+++ b/build.gradle
@@ -58,18 +58,20 @@ dependencies {
 }
 
 task loadEnvironmentVariables {
-    file('.github.credentials').readLines().each() {
-        if (!it.isEmpty() && !it.startsWith("#")) {
-            def pos = it.indexOf("=")
-            def key = it.substring(0, pos)
-            def value = it.substring(pos + 1)
+    if (file('.github.credentials').exists()) {
+        file('.github.credentials').readLines().each() {
+            if (!it.isEmpty() && !it.startsWith("#")) {
+                def pos = it.indexOf("=")
+                def key = it.substring(0, pos)
+                def value = it.substring(pos + 1)
 
-            if (key.equals("GITHUB_ACTOR")) {
-                GITHUB_ACTOR = value
-            }
+                if (key.equals("GITHUB_ACTOR")) {
+                    GITHUB_ACTOR = value
+                }
 
-            if (key.equals("GITHUB_TOKEN")) {
-                GITHUB_TOKEN = value
+                if (key.equals("GITHUB_TOKEN")) {
+                    GITHUB_TOKEN = value
+                }
             }
         }
     }
