--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,23 +14,12 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-  build:
-    name: Build packages
+  build-test:
+    name: Build and test packages
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 📥
         uses: actions/checkout@v2.3.4
-
-      - name: Restore gradle cache ♻️
-        uses: actions/cache@v2.1.6
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: |
-            ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
 
       - name: Set up JDK 16 💿
         uses: actions/setup-java@v2.3.0
@@ -38,44 +27,14 @@ jobs:
           distribution: 'zulu'
           java-version: '16'
           java-package: jdk
+          cache: 'gradle'
 
       - name: Build packages 🛠️
         run: chmod +x gradlew && ./gradlew build
         env:
           GITHUB_TOKEN: ${{ secrets.READ_PACKAGES }}
 
-  test:
-    name: Test packages
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout 📥
-        uses: actions/checkout@v2.3.4
-
-      - name: Restore gradle cache ♻️
-        uses: actions/cache@v2.1.6
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: |
-            ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      - name: Set up JDK 16 💿
-        uses: actions/setup-java@v2.3.0
-        with:
-          distribution: 'zulu'
-          java-version: '16'
-          java-package: jdk
-
-      - name: Build packages 🛠️
-        run: chmod +x gradlew && ./gradlew build
-        env:
-          GITHUB_TOKEN: ${{ secrets.READ_PACKAGES }}
-      
       - name: Test packages 🛃
         run: ./gradlew test
         env:
           GITHUB_TOKEN: ${{ secrets.READ_PACKAGES }}
-          
