--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,11 @@
 # After this step, overwrite the default GITHUB_TOKEN environment variable with the created PAT
 # in the gradle build and test steps.
 name: CI
-
-# Events that trigger this workflow
 on: [push, pull_request]
 
 jobs:
-  build-test:
-    name: Build and test packages
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 📥
@@ -34,7 +32,32 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.READ_PACKAGES }}
 
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout 📥
+        uses: actions/checkout@v2.4.0
+
+      - name: Set up JDK 16 💿
+        uses: actions/setup-java@v2.5.0
+        with:
+          distribution: 'zulu'
+          java-version: '16'
+          java-package: jdk
+          cache: 'gradle'
+
+      - name: Build packages 🛠️
+        run: chmod +x gradlew && ./gradlew build
+      
       - name: Test packages 🛃
         run: ./gradlew test
         env:
           GITHUB_TOKEN: ${{ secrets.READ_PACKAGES }}
+
+      - name: Upload Test Report 📠
+        uses: scacap/action-surefire-report@v1.0.13
+        if: ${{ github.actor != 'dependabot[bot]' }}
+        with:
+          report_paths: '**/build/test-results/test/TEST-*.xml'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
